# thoth

./: .flake8  .gitignore  README.md  pyproject.toml
tests/: test_thoth.py
thoth/: __main__.py  cli.py  config.py  core.py  data.py  exceptions.py  settings.py
