[tool.poetry]
name = "thoth"
version = "0.1.0"
description = "A CLI that turns your day to day into a log stream"
authors = ["Humberto Rocha <humrochagf@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
thoth = "thoth.cli:app"
th = "thoth.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.1"
pydantic = "^1.9.0"
dynaconf = "^3.1.8"
PyYAML = "^6.0"
toml = "^0.10.2"
rich = "^12.3.0"
arrow = "^1.2.2"
appdirs = "^1.4.4"
tinydb = "^4.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipython = "^8.2.0"
ipdb = "^0.13.9"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.950"
types-toml = "^0.10.6"
types-PyYAML = "^6.0.7"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "dynaconf.*",
  "appdirs.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
